# escvp21emulator

./: Cargo.toml  README.md
.github/workflows/: build.yml
src/: codec.rs  commands.rs  epsonlib.rs  escvp21.rs  lib.rs  main.rs
